refactore the logic for creating/defining TileSets. Only one method needs to be overwritten in child classes anymore. More consice and readable approach